prevent modal overflow hidden while viewport auto scroll following the input focus in touch device

--- a/app/assets/stylesheets/customize/_bootstrap.css.scss
+++ b/app/assets/stylesheets/customize/_bootstrap.css.scss
@@ -263,6 +263,21 @@ input[type="number"] {
   margin-top: 0;
 }
 
+html.touch {
+
+  .modal {
+    bottom: -300px;
+  }
+
+  .modal-dialog {
+    margin-bottom: 350px;
+  }
+
+  .modal-backdrop {
+    bottom: -300px;
+  }
+}
+
 // Tooltip
 // -----------------------------------------------------------------------------
 
